syntax = "proto3";

package order;

option java_package = "com.orderservice.orderservice.grpc";
option java_multiple_files = true;

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse);
    rpc GetOrder (GetOrderRequest) returns(GetOrderResponse);
}

message CreateOrderRequest{
    string user_id = 1;
    repeted OrderItem items = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  string created_at = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}